# OpenGL

./: .gitignore  CMakeLists.txt  README.md  callbacks.h  camera.h  debug.h  errors.h  glad.c  global.h  inputs.h  main.cpp  mesh.h  mesh_list.h  scenes.h  shader.h  shader_list.h  texture.h  texture_list.h
shaders/: 2_textures.frag  color_through_uniforms.frag  color_through_uniforms.vert  colored_transform.vert  lit_transform.frag  lit_transform.vert  textured.frag  textured_coloured.frag  textured_lit_transform.frag  textured_lit_transform.vert  textured_transform.vert  vertex_colors.frag  vertex_colors.vert
textures/: test.ppm
